fix flexbox on tablet+

--- a/src/components/ui/ComplexInput/ComplexInput.module.sass
+++ b/src/components/ui/ComplexInput/ComplexInput.module.sass
@@ -60,6 +60,7 @@
     margin-right: 24px
 
 .input
+  min-width: 10px
   background: transparent
   outline: none
   border: none
@@ -119,12 +120,13 @@
   .item3
     order: 3
     flex-grow: 1
-    flex-basis: auto
+    flex-basis: 50%
   .item4
     display: flex
     align-items: center
+    justify-content: flex-end
     order: 4
-    flex-basis: auto
+    flex-basis: 50%
   .btn
     &:not(:last-child)
       margin-right: 8px
